﻿2020-10-05
==========
    1. Refactored, reorganized code.

2020-10-08
==========
    1. Added reference to TauCode.Cqrs.Abstractions.