@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.Cqrs</id>
-    <version>1.3.2-dev-2020-10-08-14-45</version>
+    <version>1.3.2.1-dev-2020-10-11-15-20</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -16,8 +16,6 @@
     <dependencies>
       <group targetFramework=".NETStandard2.1">
         <dependency id="TauCode.Cqrs.Abstractions" version="1.3.2-dev-2020-10-08-14-04" />
-        <dependency id="TauCode.Domain" version="1.3.2-dev-2020-10-05-08-58" />
-        <dependency id="TauCode.Validation" version="1.3.2-dev-2020-10-05-10-39" />
       </group>
     </dependencies>
   </metadata>
