@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="TauCode.Cqrs.Abstractions" Version="1.3.2-dev-2020-10-08-14-04" />
-    <PackageReference Include="TauCode.Domain" Version="1.3.2-dev-2020-10-05-08-58" />
-    <PackageReference Include="TauCode.Validation" Version="1.3.2-dev-2020-10-05-10-39" />
   </ItemGroup>
 
 </Project>
